[package]
name = "sqldb_tester"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sqldb_tester"

[dependencies]
futures = "0.3.23"
form_urlencoded = "1.0.1"
wasmbus-rpc = "0.10.0"
wasmcloud-interface-httpserver = "0.7.0"
wasmcloud-interface-sqldb = "0.7.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] } 

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
